[gd_scene load_steps=93 format=3 uid="uid://6o55hy0wr55b"]

[ext_resource type="Script" uid="uid://1lfwyehryqb4" path="res://scripts/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://b2u6rc28maq3c" path="res://assets/Adventurer/adventurer-Sheet.png" id="2_qlg0r"]
[ext_resource type="Texture2D" uid="uid://cvo10hokyy8hf" path="res://assets/sprites/Legacy-Fantasy - High Forest 2.3/Character/Jumlp-All/Jump-All-Sheet.png" id="3_qlg0r"]
[ext_resource type="Texture2D" uid="uid://dieih4hycr562" path="res://assets/sprites/Legacy Collection/Assets/Misc/Hit/hit.png" id="5_qlg0r"]
[ext_resource type="AudioStream" uid="uid://boltqwo4gj2bq" path="res://assets/audio/DSGNMisc_MOVEMENT-Retro Jump_HY_PC-003.wav" id="6_fjrip"]
[ext_resource type="Script" uid="uid://cxs5jwo5ouxhc" path="res://scripts/basic_sword_hitbox.gd" id="6_tuyoq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_qlg0r")
region = Rect2(300, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_qlg0r")
region = Rect2(50, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("2_qlg0r")
region = Rect2(100, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("2_qlg0r")
region = Rect2(150, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("2_qlg0r")
region = Rect2(200, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("2_qlg0r")
region = Rect2(250, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_qlg0r")
region = Rect2(50, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_qlg0r")
region = Rect2(100, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_qlg0r")
region = Rect2(150, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_qlg0r")
region = Rect2(200, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_qlg0r")
region = Rect2(250, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_qlg0r")
region = Rect2(300, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("2_qlg0r")
region = Rect2(50, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3ue"]
atlas = ExtResource("2_qlg0r")
region = Rect2(100, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk41t"]
atlas = ExtResource("2_qlg0r")
region = Rect2(150, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuw3a"]
atlas = ExtResource("2_qlg0r")
region = Rect2(200, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8txt3"]
atlas = ExtResource("2_qlg0r")
region = Rect2(250, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w11d"]
atlas = ExtResource("2_qlg0r")
region = Rect2(300, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_770dr"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f1cb"]
atlas = ExtResource("2_qlg0r")
region = Rect2(50, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwp2n"]
atlas = ExtResource("2_qlg0r")
region = Rect2(200, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yhus"]
atlas = ExtResource("2_qlg0r")
region = Rect2(250, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlll7"]
atlas = ExtResource("2_qlg0r")
region = Rect2(300, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk6i7"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c3st"]
atlas = ExtResource("2_qlg0r")
region = Rect2(50, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_1da1t"]
atlas = ExtResource("2_qlg0r")
region = Rect2(100, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_p21yu"]
atlas = ExtResource("2_qlg0r")
region = Rect2(150, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_irpag"]
atlas = ExtResource("2_qlg0r")
region = Rect2(200, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpsgo"]
atlas = ExtResource("2_qlg0r")
region = Rect2(250, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx8is"]
atlas = ExtResource("2_qlg0r")
region = Rect2(300, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_qlg0r")
region = Rect2(200, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("2_qlg0r")
region = Rect2(250, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("2_qlg0r")
region = Rect2(300, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_holxr"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("2_qlg0r")
region = Rect2(200, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("2_qlg0r")
region = Rect2(250, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("2_qlg0r")
region = Rect2(300, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("2_qlg0r")
region = Rect2(50, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("2_qlg0r")
region = Rect2(100, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("3_qlg0r")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("3_qlg0r")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("3_qlg0r")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx63k"]
atlas = ExtResource("2_qlg0r")
region = Rect2(150, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("2_qlg0r")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("2_qlg0r")
region = Rect2(100, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("2_qlg0r")
region = Rect2(150, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("2_qlg0r")
region = Rect2(50, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("2_qlg0r")
region = Rect2(100, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("2_qlg0r")
region = Rect2(150, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxlsd"]
atlas = ExtResource("2_qlg0r")
region = Rect2(50, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2mi"]
atlas = ExtResource("2_qlg0r")
region = Rect2(100, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_apa73"]
atlas = ExtResource("2_qlg0r")
region = Rect2(150, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_74r1k"]
atlas = ExtResource("2_qlg0r")
region = Rect2(200, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8svfe"]
atlas = ExtResource("2_qlg0r")
region = Rect2(250, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a3c5"]
atlas = ExtResource("2_qlg0r")
region = Rect2(300, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_42b1b"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7ic4"]
atlas = ExtResource("2_qlg0r")
region = Rect2(50, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_au7lq"]
atlas = ExtResource("2_qlg0r")
region = Rect2(100, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("2_qlg0r")
region = Rect2(50, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("2_qlg0r")
region = Rect2(100, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("2_qlg0r")
region = Rect2(150, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvfe"]
atlas = ExtResource("2_qlg0r")
region = Rect2(200, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy8y"]
atlas = ExtResource("2_qlg0r")
region = Rect2(250, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("2_qlg0r")
region = Rect2(300, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx1m4"]
atlas = ExtResource("2_qlg0r")
region = Rect2(150, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjji"]
atlas = ExtResource("2_qlg0r")
region = Rect2(200, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ulf"]
atlas = ExtResource("2_qlg0r")
region = Rect2(250, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e8lb"]
atlas = ExtResource("2_qlg0r")
region = Rect2(300, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gdjj"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_nubpm"]
atlas = ExtResource("2_qlg0r")
region = Rect2(300, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua5cf"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 370, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_51ujp"]
atlas = ExtResource("2_qlg0r")
region = Rect2(50, 370, 50, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_iywne"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_60mlk")
}],
"loop": false,
"name": &"basic_attack_1",
"speed": 12.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_d2wvv")
}],
"loop": false,
"name": &"basic_attack_2",
"speed": 9.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_sc3ue")
}],
"loop": false,
"name": &"basic_attack_3",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk41t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuw3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8txt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w11d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_770dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f1cb")
}],
"loop": true,
"name": &"block",
"speed": 5.0
}, {
"frames": [{
"duration": 1.6,
"texture": SubResource("AtlasTexture_mwp2n")
}, {
"duration": 1.6,
"texture": SubResource("AtlasTexture_0yhus")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_jlll7")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_qk6i7")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_6c3st")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_1da1t")
}],
"loop": false,
"name": &"charge_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p21yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irpag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpsgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx8is")
}],
"loop": true,
"name": &"charged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holxr")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}],
"loop": true,
"name": &"dash",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}],
"loop": true,
"name": &"hit_floor",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx63k")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 0.3,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}],
"loop": true,
"name": &"jump",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxlsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apa73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74r1k")
}],
"loop": true,
"name": &"ledge_grab",
"speed": 5.0
}, {
"frames": [{
"duration": 0.4,
"texture": SubResource("AtlasTexture_8svfe")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_2a3c5")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_42b1b")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_h7ic4")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_au7lq")
}],
"loop": true,
"name": &"ledge_pull_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ulf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gdjj")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nubpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua5cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51ujp")
}],
"loop": true,
"name": &"wall_slide",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqkch"]
size = Vector2(20, 45.9879)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qlg0r"]
size = Vector2(46.5, 54.4688)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdulj"]
atlas = ExtResource("5_qlg0r")
region = Rect2(0, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vau08"]
atlas = ExtResource("5_qlg0r")
region = Rect2(31, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsb7e"]
atlas = ExtResource("5_qlg0r")
region = Rect2(62, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjsmb"]
atlas = ExtResource("5_qlg0r")
region = Rect2(0, 0, 3, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mwp2n"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_vdulj")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_vau08")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_qsb7e")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjsmb")
}],
"loop": true,
"name": &"none",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
position = Vector2(-2, 3)
collision_mask = 10
script = ExtResource("1_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(10, -30)
scale = Vector2(1.44153, 1.55405)
sprite_frames = SubResource("SpriteFrames_iywne")
animation = &"basic_attack_2"

[node name="player_hitbox" type="CollisionShape2D" parent="."]
position = Vector2(8, -26)
rotation = -0.010021
shape = SubResource("RectangleShape2D_dqkch")

[node name="attack_hitboxes" type="Node2D" parent="."]

[node name="basic_sword_hitbox" type="Area2D" parent="attack_hitboxes"]
position = Vector2(8, -27)
collision_layer = 4
collision_mask = 2
monitoring = false
script = ExtResource("6_tuyoq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_hitboxes/basic_sword_hitbox"]
position = Vector2(21.75, 0)
shape = SubResource("RectangleShape2D_qlg0r")

[node name="hit_effect_anim" type="AnimatedSprite2D" parent="attack_hitboxes/basic_sword_hitbox"]
position = Vector2(24, 2)
scale = Vector2(0.693548, 0.78125)
sprite_frames = SubResource("SpriteFrames_mwp2n")
animation = &"hit"

[node name="timers" type="Node2D" parent="."]

[node name="dash_timer" type="Timer" parent="timers"]
one_shot = true

[node name="roll_reset" type="Timer" parent="timers"]
one_shot = true

[node name="comboResetTimer" type="Timer" parent="timers"]
one_shot = true

[node name="charge_flash_timer" type="Timer" parent="timers"]

[node name="hit_invincible_timer" type="Timer" parent="timers"]
one_shot = true

[node name="raycasts" type="Node2D" parent="."]

[node name="head_check" type="RayCast2D" parent="raycasts"]
position = Vector2(8, -43)
target_position = Vector2(0, -5)
collision_mask = 8

[node name="grabhandraycast" type="RayCast2D" parent="raycasts"]
position = Vector2(9, -51)
target_position = Vector2(13, 0)
collision_mask = 8

[node name="grabcheckraycast" type="RayCast2D" parent="raycasts"]
position = Vector2(8, -45)
target_position = Vector2(14, 0)
collision_mask = 8

[node name="wallslideraycast" type="RayCast2D" parent="raycasts"]
position = Vector2(9, -29)
target_position = Vector2(14, 1)
collision_mask = 8

[node name="audio" type="Node" parent="."]

[node name="jump" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("6_fjrip")
bus = &"SFX"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="attack_hitboxes/basic_sword_hitbox/hit_effect_anim" to="attack_hitboxes/basic_sword_hitbox" method="_on_hit_effect_anim_animation_finished"]
[connection signal="timeout" from="timers/dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="timers/roll_reset" to="." method="_on_roll_reset_timeout"]
[connection signal="timeout" from="timers/comboResetTimer" to="." method="_on_combo_reset_timer_timeout"]
[connection signal="timeout" from="timers/charge_flash_timer" to="." method="_on_charge_flash_timer_timeout"]
[connection signal="timeout" from="timers/hit_invincible_timer" to="." method="_on_hit_invincible_timer_timeout"]
